--- a/styles_0.css
+++ b/styles_0.css
@@ -25,13 +25,10 @@ body{
     left: 0;
 }
 
-
-
 .offscreen{
     position: absolute;
     top:0;
     left: -1200;
-
 }
 
 /*.container{
@@ -42,14 +39,6 @@ body{
     border: 1px solid white;
 }*/
 
-.register{
-    position: absolute;
-    left:50%;
-    top:80%;
-    transform: translate(-50%, -50%);
-    transition-duration: .4s;
-}
-
 .floating-button{
     text-decoration: none;
     font-family: Roboto, sans-serif;
@@ -59,18 +48,23 @@ body{
     color: #FDFCFC;
 }
 
-button{
+.register{
     display: inline-block;
     width: 140px;
     height: 50px;
     line-height: 45px;
     border-radius: 15px;
-    margin: 10px 20px;
+    margin: 30px auto 20px;
     background: #F71717;
     opacity: .8;
     box-shadow: 5px 5px 50px 5px #FDFCFC;
     border: none;
     transition: .3s;
+}
+
+.noname{
+    width: 50%;
+    height: 100%;
 }
 
 .intro-content{
@@ -83,7 +77,7 @@ button{
     z-index: 3;
     width: 50%;
     height: 100%;
-    /*border: 1px solid red;*/
+   /* border: 1px solid red;*/
 }
 
 .intro{
@@ -93,6 +87,7 @@ button{
     background: url("media/tail-lights-1241171_1280.jpg") center no-repeat;
     background-size: cover;
 }
+
 /* this is a mask for changing the tint or additional effects*/
 /* .intro:after{
     content: "";
@@ -104,25 +99,38 @@ button{
     z-index: 2;
     width: 100%;
     height: 100%;
-    
 }*/
+     
+.dot{
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #FDFCFC;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+      
+.active, .dot:hover {
+    background-color: #717171;
+}
 
 .intro-title{
     font-family:'Dancing Script', sans-serif;
-    font-size: 5rem;
-    color: white;
-    margin:20px ;
+    font-size: 3.5rem;
+    color: #FDFCFC;
+    margin:30px 0px 10px 0px ;
     text-align: center;
-
+    font-weight: 900;
 }
 
 .intro-subtitle{
     font-family:'Dancing Script', sans-serif;
     font-size: 3rem;
-    color: white;
-    margin: 20px;
+    color: #FDFCFC;
+    margin: 30px 0px 10px 0px;
     text-align: center;
-
 }
 
 /*.logo{
@@ -161,28 +169,26 @@ button{
 
     .intro-title{
         font-family:'Dancing Script', sans-serif;
-        font-size: 4rem;
-        color: white;
-        margin: 0;
+        font-size: 2.5rem;
+        color: #FDFCFC;
+        margin: 20px 10px 0px 10px;
         text-align: center;
         flex-wrap: wrap;
-    
     }
     
     .intro-subtitle{
         font-family:'Dancing Script', sans-serif;
-        font-size: 2rem;
-        color: white;
-        margin: 0;
+        font-size: 1.5rem;
+        color: #FDFCFC;
+        margin: 20px 10px 0px 10px;
         text-align: center;
         flex-wrap: wrap;
-    
     }  
 
     .register{
         position: absolute;
         left:50%;
-        top:80%;
+        top:90%;
         transform: translate(-50%, -50%);
         transition-duration: .4s;
     }
@@ -225,29 +231,26 @@ button{
 
     .intro-title{
         font-family:'Dancing Script', sans-serif;
-        font-size: 3rem;
-        color: white;
-        margin: 0;
+        font-size: 2rem;
+        color: #FDFCFC;
+        margin: 20px 10px 0px 10px;
         text-align: center;
         flex-wrap: wrap;
-    
-    
     }
     
     .intro-subtitle{
         font-family:'Dancing Script', sans-serif;
         font-size: 1rem;
-        color: white;
-        margin: 0;
+        color: #FDFCFC;
+        margin: 20px 10px 0px 10px;
         text-align: center;
         flex-wrap: wrap;
-    
-    }  
+    }      
 
     .register{
         position: absolute;
         left:50%;
-        top:80%;
+        top:70%;
         transform: translate(-50%, -50%);
         transition-duration: .4s;
     }
